// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`trix-editor can mount "read only" TrixEditor 1`] = `
<div class="SharpTrix SharpTrix--read-only">
	<div class="SharpModule__inner">
		<input id="trix-input-WYSIWYG_TEST" type="hidden" value="<div>Wysiwyg text</div>">
		<trix-toolbar id="trix-toolbar-WYSIWYG_TEST" class="SharpModule__header">
			<trix-custom-toolbar-stub toolbar="bold,italic,|,link"></trix-custom-toolbar-stub>
		</trix-toolbar>
		<trix-editor contenteditable="" role="textbox" input="trix-input-WYSIWYG_TEST" toolbar="trix-toolbar-WYSIWYG_TEST" placeholder="placeholder" class="SharpModule__content" style="height: 199px; max-height: 199px;"></trix-editor>
	</div>
</div>
`;

exports[`trix-editor can mount TrixEditor 1`] = `
<div class="SharpTrix">
	<div class="SharpModule__inner">
		<input id="trix-input-WYSIWYG_TEST" type="hidden" value="<div>Wysiwyg text</div>">
		<trix-toolbar id="trix-toolbar-WYSIWYG_TEST" class="SharpModule__header">
			<trix-custom-toolbar-stub toolbar="bold,italic,|,link"></trix-custom-toolbar-stub>
		</trix-toolbar>
		<trix-editor contenteditable="" role="textbox" input="trix-input-WYSIWYG_TEST" toolbar="trix-toolbar-WYSIWYG_TEST" placeholder="placeholder" class="SharpModule__content" style="height: 199px; max-height: 199px;"></trix-editor>
	</div>
</div>
`;
